# FAPIDemo

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.txt  alembic.ini  claude_gen_crud.md  debug.env  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2026_06_09_0014-d4f51f3bcf60_init.py  2026_07_01_1702-80bbb1a1ceb3_change_user_email_full_name_lengths.py  f3b751e07090_add_is_active_to_user.py
app/: main.py  models.py
app/api/: __init__.py  dependencies.py  healthcheck.py
app/api/v1/: __init__.py  admin.py  auth.py  users.py  webhooks.py
app/core/: config.py  database.py  exceptions.py  models.py  schemas.py  security.py  types.py
app/modules/: __init__.py  accounts.py  auth.py  payment.py  user.py  users.py
app/modules/base/: models.py
app/utils/: routers.py
app/utils/db/: relationship_cascade.py
app/utils/fastapi/: deps.py  routers.py
app/utils/logging/: filters.py
app/utils/orm/: __init__.py  fk_on_delete.py  inspection.py  shortcuts.py
app/utils/types/: result.py
tests/: __init__.py  conftest.py
tests/e2e/v1/: _utils.py  test_admin.py  test_auth.py  test_users.py  test_webhooks.py
tests/integrated/modules/: test_accounts.py  test_auth.py  test_users.py
tests/modules/: test_accounts.py
tests/unit/core/: test_security.py
tests/unit/modules/: test_accounts.py  test_auth.py  test_users.py
