[project]
name = "fapidemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.136.1",
    "sqlalchemy[postgresql-asyncpg]>=2.0.49",
    "alembic>=1.18.4",
    "pwdlib[argon2]>=0.3.0",

### Alembic ###
[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
path_separator = "os"

[tool.alembic.loggers]
keys = ["root", "sqlalchemy", "alembic"]

[tool.alembic.logger_root]
level = "WARNING"
handlers = ["console"]
qualname = ""

[tool.alembic.logger_sqlalchemy]
level = "WARNING"
handlers = []
qualname = "sqlalchemy.engine"

[tool.alembic.logger_alembic]
level = "INFO"
handlers = []
qualname = "alembic"

[tool.alembic.handlers]
keys = ["console"]

[tool.alembic.handler_console]
class = "StreamHandler"
args = "(sys.stderr,)"
level = "NOTSET"
formatter = "generic"

[tool.alembic.formatters]
keys = ["generic"]

[tool.alembic.formatter_generic]
format = "%(levelname)-5.5s [%(name)s] %(message)s"
datefmt = "%H:%M:%S"
